--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
         <div class="calcbody">
-            <input type="text" placeholder="0" id="inputbox">
+            <input type="text" placeholder="0" id="inputbox" readonly>
             <div>
                 <button class="powerbtns">AC</button>
                 <button class="powerbtns">DEL</button>
